[package]
name = "telegram-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-openai = "0.23.3"
chrono = "0.4.24"
dotenv = "0.15.0"
dptree = "0.3.0"
reqwest = { version = "0.12.4", features = ['json']}
serde = { version = "1.0.154",features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.1"
teloxide = { version = "0.12.2", features = ["macros", "redis-storage","bincode-serializer", "sqlite-storage"] }
tiktoken-rs = "0.3.3"
tokio ={ version = "1.26.0", features = ["rt-multi-thread", "macros", "time"]}
tokio-stream = "0.1.12"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version  = "1.3.0", features = ["v4","fast-rng"]}
warp = "0.3.3"
